--- a/conjoint_analysis/Conjoint.Rmd
+++ b/conjoint_analysis/Conjoint.Rmd
@@ -2,18 +2,24 @@
 title: "產品設計與定價策略"
 output: 
   flexdashboard::flex_dashboard:
-    theme: default
-    css: data/JH.css
+    theme: flatly
     social: menu # share to other in social media
     source_code: embed 
-    logo: data/nsysu48.png # header上的小logo
-    favicon: data/nsysu48.png # browser上title旁邊的小logo
+    favicon: nsysu48.png # browser上title旁邊的小logo
 runtime: shiny
 ---
 
 ```{r}
-pacman::p_load(magrittr,shiny,shinyWidgets,shinythemes,flexdashboard,highcharter,DT,dplyr)
-load("data/W2.rdata")
+require(magrittr)
+require(shiny)
+require(shinyWidgets)
+require(shinythemes)
+require(flexdashboard)
+require(highcharter)
+require(DT)
+require(dplyr)
+
+load("W2.rdata")
 UT = function(v) rowSums(W[, c(1, v + c(1,4,7,10))])
 PC = function(pd) {
   2.5 + sum(sapply(1:length(att), 
@@ -29,24 +35,29 @@ pqr = function(p, m, u, prob=FALSE) {
     q = sapply(p, function(x) sum(u > x) )  # quantity
   pf = q * (p-m); ip = which.max(pf)        # profit
   r  = q * p;     ir = which.max(r)         # revenue
-    par(cex=0.7,mar=c(5,4,4,3))
-  plot(p,q,type='l',main="Demand Cruve",xlab="price",ylab="qty",ylim=c(0,80),
-       lwd=3, col="gold")
-  abline(v=p[ip],col='pink'); abline(v=p[ir],col='cyan')
+  
+  par(mar=c(5,4,3,3),cex=1)
+  plot(p,q,type='l',main="價格反應函數(需求曲線)",
+       xlab="價格(Price)",ylab="數量(Qty)",font.lab=2,
+       ylim=c(0,80),lwd=3, col="gold",
+       family="蘋方-繁 中黑體")
+  abline(v=p[ip],col='pink',lwd=2); abline(v=p[ir],col='cyan',lwd=2)
   abline(h=seq(20,80,20),lty=3,col='grey')
-  plot(p, r, type='l',main="Revenue",ylab="",ylim=c(0,300),font.lab=2,
+  plot(p, r, type='l',main="營收函數",ylab="",ylim=c(0,300),font.lab=2,
        lwd=3, col="gold", xlab=sprintf(
-         "P = %.1f, Q = %.1f, R = %.1f, Pf = %.1f", 
-         p[ir], q[ir], r[ir], pf[ir] ))
-  abline(v=p[ir],col='cyan');
+         "價格=%.1f, 數量=%.1f, 營收=%.1f, 獲利=%.1f", 
+         p[ir], q[ir], r[ir], pf[ir] ),
+       family="蘋方-繁 中黑體")
+  abline(v=p[ir],col='cyan',lwd=2);
   abline(h=seq(50,250,50),lty=3,col='grey')
-  plot(p, pf, type='l',main="Profit",ylab="",ylim=c(0,110),font.lab=2,
+  plot(p, pf, type='l',main="獲利函數",ylab="",ylim=c(0,110),font.lab=2,
        lwd=3, col="gold", xlab=sprintf(
-         "P = %.1f, Q = %.1f, R = %.1f, Pf =%.1f",
-         p[ip], q[ip], r[ip], pf[ip] )  )
-  abline(v=p[ip],col='pink');
+         "價格=%.1f, 數量=%.1f, 營收=%.1f, 獲利=%.1f",
+         p[ip], q[ip], r[ip], pf[ip] ),
+       family="蘋方-繁 中黑體"  )
+  abline(v=p[ip],col='pink',lwd=2);
   abline(h=seq(20,100,20),lty=3,col='grey')
-  text(3.5,100,sprintf("MC = %.1f",m),pos=4,font=2)
+  text(9,100,sprintf("邊際成本 = %.1f",m),pos=4,font=2)
 }
 att = apply(profiles,2,max)
 attl = unlist(sapply(1:length(att), function(x) rep(x , att[x])))
@@ -55,12 +66,13 @@ attl = unlist(sapply(1:length(att), function(x) rep(x , att[x])))
 
 
 
-產品組合模擬 {data-orientation=rows}
-=====================================
+價量關係 {data-orientation=rows}
+==========================================================
 
 Input {.sidebar data-width=350px}
 -------------------------------------
-### 選擇產品屬性
+
+<h4>設定產品屬性</h4>
 ```{r}
 hr()
 
@@ -107,104 +119,50 @@ prettyRadioButtons(
 ```
 
 
-<p>
-<img src="cm_nsysu.png" alt="CM.NSYSU"  height="92" align="left"> <br>
-[中山管理學院 商業大數據平台](https://bap.cm.nsysu.edu.tw/) <br>
-<p style="font-size:11px">唐思琪、卓雍然</p> <br>
-</p>
+<img src="BAPlogo.png" alt="CM.NSYSU" width="80" height="80" align="left"></br>
+<h6>[中山大學商業大數據平台](https://bap.cm.nsysu.edu.tw/)</h6>
+<h6>唐思琪</h6>
 
-Row {.tabset .tabset-fade data-height=15%}
--------------------------------------
-### 練習1
-用APW找出來的最佳產品規格，其最佳價格是？
-
-### 練習2
-它會帶來多大的銷售量、營收和獲利？
-
-### 練習3
-試著使用模擬程式，找尋可以產生最大獲利和營收的產品規格和價格？
-
-### 練習4
-它跟用APW找出來的最佳產品規格是一樣的嗎？  <br>
-這個練習的策略意涵是什麼？
 
 Row { data-height=85% }
 -------------------------------------
-### 該組合的產品效用的分佈、需求曲線、營收曲線及獲利曲線
+### 
 ```{r}
 renderPlot({
  pd1 = as.integer(c(input$A1,input$A2,input$A3,input$A4)) # 產品設計 # input回傳是字串型態所以要改
  ut1 = UT(pd1)
  hist(ut1)
- par(mfcol=c(2,2),cex=0.7,mar=c(5,3,4,3))
- hist(ut1,-5:13,main="Distribution of Utility",xaxt='n',col='gray',
-      border='white',xlab="Utility",ylab="",xlim=c(-4,14))
+ par(mfcol=c(2,2),mar=c(5,3,4,3),cex=1,
+     family="蘋方-繁 中黑體")
+ hist(ut1,-5:13,main="效用分佈",xaxt='n',col='gray',
+      border='white',xlab="效用(Utility)",ylab="",xlim=c(-4,14))
  axis(1,at=seq(-4,14,2))
- pqr(seq(3.5,11,0.1),PC(pd1),ut1,input$Prob == "1") # 價格範圍
+ pqr(seq(2.5,11,0.1),PC(pd1),ut1,input$Prob == "1") # 價格範圍
 })
 ```
 
-
-
-
-所有產品組合 {data-orientation=rows }
-=====================================
-
-Row {.tabset .tabset-fade data-width=30%}
+Row {.tabset .tabset-fade data-height=15%}
 -------------------------------------
+### 🚑 練習1
+■ 用APW找出來的最佳產品規格，其最佳價格是？ <br>
+■ 它會帶來多大的銷售量、營收和獲利？
 
-### 變數介紹
+### 🚑 練習2
+■ 試著使用模擬程式，找尋可以產生最大獲利和營收的產品規格和價格？ <br>
+■ 它會帶來多大的銷售量、營收和獲利？
 
-我們還可以寫一段程式，把所有可能的產品(3x3x3x2=54)掃過一遍，把每一個可能產品的最佳營收和獲利都找出來，放在 X 這個矩陣裡面。 <br>
+### 🚑 練習3
+■ 它跟用APW找出來的產品規格和最佳價格是一樣的嗎？ <br>
+■ 這個練習的策略意涵是什麼？
 
-<p class="wwl">
-<span style="font-size:16px">`r "\U1F5FF"` 變數介紹</span><br>
-&emsp; ▪ `v1`~`v4`：代表各個產品屬性（苦味、茶種、包裝、外加香料）<br>
-&emsp; ▪ `ut`：產品對消費者的效用 <br>
-&emsp; ▪ `cost`：產品的邊際價格 <br>
-&emsp; ▪ ︎`p1`：最大營收下的產品價格<br>
-&emsp; ▪ ︎`q1`：最大營收下的產品數量 <br>
-&emsp; ▪ ︎`r1`：最大營收下的營收 <br>
-&emsp; ▪ ︎`pf1`：最大營收下的獲利 <br>
-&emsp; ▪ `p2`：最大獲利下的產品價格<br>
-&emsp; ▪ `q2`：最大獲利下的產品數量 <br>
-&emsp; ▪ `r2`：最大獲利下的營收 <br>
-&emsp; ▪ `pf2`：最大獲利下的獲利 <br>
-</p class="wwl">
+最佳策略選項 {data-orientation=rows }
+======================================================================
+我們可以寫一段程式，把所有可能的產品`(3x3x3x2=54)`都掃過一遍，
+將可以產生最大營收和獲利的最佳價格都找出來，
+放在底下(`X`)這個矩陣裡面。
 
-### 練習1
-
-現在，利用下面的表格進行排序： <br>
-1. 請你試著找出最大營收(r1)的產品組合為何？ <br>
-2. 最大獲利(pf2)的產品呢？
-
-
-### 練習2
-
-通常公司的目標都不只是將營收、獲利最大化這麼簡單。 <br>
-請問在不虧本前提下依最大營收排序？
-
-### 練習3
-
-滲透率30%以上依最大獲利排序？
-
-###`r "\U1F4A1"`問題討論 
-
-現實的狀況是，你常常需要在目標不明確的狀況下做策略規劃：
-
-<p class="qiz" >
-1. 請試著自己設定營運目標，找到實現這一個目標的最佳策略。 <br>
-2. 跟大家分享你的目標和策略，和它們背後的邏輯。  <br>
-3. 最後再想看看，老闆為什麼常常不告訴你明確的目標，就叫你做策略規劃呢？
-</p class="qiz">
-
-
-Row {.tabset .tabset-fade data-width=70%}
+Row
 -------------------------------------
-
-
-
-
 ```{r}
 pds = as.matrix(expand.grid(1:3,1:3,1:3,1:2))
 X = t(apply(pds, 1, function (v) {
@@ -223,59 +181,83 @@ colnames(X) = c('v1','v2','v3','v4',  # product spec
                 'p2','q2','r2','pf2'  # price, quantity, revenue, profit at max. porfit
                 )
 
-
 renderDataTable({
- datatable(X %>% round(digits=2), height="200px")
-})
+ datatable(
+   X %>% round(digits=1), extensions=c('Scroller'),
+   # formatStyle(columns=0:2, fontSize = '90%'), 
+   options=list(scrollY="350px",scrollX=F,paging=F,searching=F,info=F)
+   )})
+
 ```
 
 
+Row {.tabset .tabset-fade}
+-----------------------------------------
 
-```{r}
-# renderDataTable({
-#  datatable( subset(X[order(- X$r1),], pf1>0)[,-c(11:14)] %>% round(digits=2), height="200px") 
-# })
-```
+### 💡 欄位定義
++ `v1`~`v4`：代表各個產品選項（苦味、茶種、包裝、外加香料）
++ `ut`：產品對消費者的平均效用
++ `cost`：產品的邊際價格
++ `p1,p2`：最大營收(獲利)下的產品價格
++ `q1,q2`：最大營收(獲利)下的銷售量
++ `r1,r2`：最大營收(獲利)下的營收
++ `pf1,pf2`：最大營收(獲利)下的獲利
+
+### 🚑 練習1
+現在，利用下面的表格進行排序： 
+1. 請你試著找出最大營收(`r1`)的產品組合為何？ 
+2. 最大獲利(`pf2`)的產品呢？
+
+### 🚑 練習2
+通常公司的目標都不只是將營收、獲利最大化這麼簡單。 
+請問，在`不虧本`的前提下，`最大營收`的策略是什麼？
+
+### 🚑 練習3
+請問，在`滲透率30%`以上的前提之下，`最大獲利`的策略是什麼？
+
+### 🎯 問題討論 
+現實的狀況是，你常常需要在目標不明確的狀況下做策略規劃：
+
+1. 請試著自己設定營運目標，並找到實現這一個目標的最佳策略 
+2. 然後跟大家分享你的目標和策略，和它們背後的邏輯  
+3. 最後再想看看，老闆為什麼常常不告訴你明確的目標，就叫你做策略規劃呢？
 
 
-```{r}
-# renderDataTable({
-#  datatable( subset(X[order(- X$pf2),], q2>30)[,-c(7:10)] %>% round(digits=2), height="150px") 
-# })
-```
-
-
-
-所有產品組合視覺化 {data-orientation=column}
+策略空間 {data-orientation=column}
 =====================================
 
 Column {data-width=30%}
 -------------------------------------
-### 問題討論
 
-<h4>【練習1】</h4>
-<p class="qiz" >
-接下來，我們將所有產品的最佳營收和獲利一起畫在同一個平面上。 <br>
-請大家檢討一下你們的策略，你會想要調整你的策略嗎？如何調整呢？
-</p class="qiz" >
+接下來，我們將所有產品的最佳營收和獲利一起畫在同一個平面上(如右圖) 
 
+### 🚑 練習1  {data-height=15%}
+請檢討一下你的策略，你會想要調整策略嗎？如何調整呢？
 
-<h4>【練習2】</h4>
-<p class="qiz" >
-在多重目標的情境之下，什麼樣的策略才是合理的策略？ <br>
+### 🚑 練習2  {data-height=15%}
+在多重目標的情境之下，什麼樣的策略才是合理的策略？ 
 合理的策略要有什麼條件呢？ 
-</p class="qiz" >
 
-
-<h4>【練習3】</h4>
-<p class="qiz" >
+### 🚑 練習3  {data-height=15%}
 你可以圖中辨識出哪一些是產品是「合理」的嗎？
-</p class="qiz" >
+
+### 🎯 學習重點：  {data-height=20%}
+
+1. 『決定策略目標』通常比『找出最佳策略』困難
+2. 市場模擬和視覺化工具可以幫我們看到所有策略選項和結果
+3. 看到整個策略空間，有助於設定策略目標
+
+### {data-height=35%}
+ 
+<img src="BAPlogo.png" alt="CM.NSYSU" width="80" height="80" align="left"></br>
+<h6>[中山大學商業大數據平台](https://bap.cm.nsysu.edu.tw/)</h6>
+<h6>唐思琪</h6>
+
 
 Column { data-width=70%}
 -------------------------------------
 
-###{}
+### 
 ```{r}
 df = data.frame(revenue=c(X$r1,X$r2),profit=c(X$pf1,X$pf2),
                 p=c(X$p1,X$p2),q=c(X$q1,X$q2),
